# canarytokens

./: .gitignore  .pre-commit-config.yaml  README.md  authenticode.py  caa_monkeypatch.py  canarydrop.py  channel.py  channel_dns.py  channel_http.py  channel_input_bitcoin.py  channel_input_imgur.py  channel_input_linkedin.py  channel_input_mtls.py  channel_input_mysql.py  channel_input_smtp.py  channel_input_wireguard.py  channel_output_email.py  channel_output_twilio.py  channel_output_webhook.py  constants.py  exception.py  frontend.env  frontend.tac  httpd_site.py  kubeconfig.py  loghandlers.py  msexcel.py  msword.py  mysql.py  pdfgen.py  py3_migration.md  pyproject.toml  queries.py  redismanager.py  requirements.txt  settings.py  setup_db.py  sign_file.py  smtpd.tac  switchboard.py  (+6 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: common-debian.sh  docker-debian.sh
.github/workflows/: build_docker.yml  tests.yaml
aws-token-infra/: awsid.tf
aws-token-infra/lambdas/APITokensSafetyNet/: lambda_function.py
backend/: app.py
canarytokens/: canarydrop.py  channel.py  channel_dns.py  channel_output_webhook.py  exceptions.py  models.py  queries.py  redismanager.py  settings.py  switchboard.py  tokens.py
switchboard/: settings.py  switchboard.env  switchboard.tac
templates/: browser_scanner.html
templates/emails/: notification.html
templates/static/: styles.css  styles.min.css
tests/: conftest.py  test_canarydrops.py  test_dns_channel.py  test_models.py  test_switchboard.py
(+2 files in other folders)
