[tool.poetry]
name = "canarytokens"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Twisted = "^21.7.0"
redis = "^4.1.2"
urllib3 = "^1.26.8"
PyQRCode = "^1.2.1"
simplejson = "^3.17.6"
requests = "^2.27.1"
isort = "^5.10.1"
PyNaCl = "^1.5.0"
cryptography = "^36.0.1"
pyblake2 = "^1.1.2"
Jinja2 = "^3.0.3"
pyOpenSSL = "^21.0.0"
service-identity = "^21.1.0"
pydantic = {extras = ["email"], version = "^1.9.0"}
fastapi = "^0.73.0"
uvicorn = "^0.17.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^6.2.5"
coverage = "^6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
